--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cookie Alert component",
+  "name": "cookie-alert-demo",
   "version": "1.0.0",
   "description": "A Web Component that allows you to display your message about your cookie policy.",
   "main": "src/index.js",
